# autoball

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat
.kiro/steering/: autoball.md
include/: arena.h  audio.h  autoball.h  autoball_constants.h  ball.h  bot.h  car.h  hud.h  input.h  match.h  math3d.h  physics.h  renderer.h
shaders/: world.frag.glsl  world.vert.glsl
src/: arena.c  audio.c  ball.c  bot.c  car.c  hud.c  input.c  main.c  match.c  math3d.c  physics.c  renderer.c
